@@ -212,9 +212,6 @@ extern	int	Pstate(struct ps_prochandle *);
 extern	const psinfo_t *Ppsinfo(struct ps_prochandle *);
 extern	const pstatus_t *Pstatus(struct ps_prochandle *);
 extern	int	Psetcred(struct ps_prochandle *, const prcred_t *);
-extern	ssize_t	Ppriv(struct ps_prochandle *, prpriv_t *, size_t);
-extern	int	Psetpriv(struct ps_prochandle *, prpriv_t *);
-extern	void   *Pprivinfo(struct ps_prochandle *);
 extern	int	Pgetareg(struct ps_prochandle *, int, prgreg_t *);
 extern	int	Pputareg(struct ps_prochandle *, int, prgreg_t);
 extern	int	Psetrun(struct ps_prochandle *, int, int);
